feat: Refactor GlobalThreadFactory and GlobalThreadPool for improved thread management and clarity; enhance TreeBuildUtils with builder pattern for flexible tree construction